--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^5.21.7"
   }
 }
